<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.SettingsActivity">

    <RadioGroup
        android:id="@+id/rg_themes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_green_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/green_color_theme_label"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/rb_purple_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/purple_color_theme_label"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/rb_red_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/red_color_theme_label"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/rb_blue_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/blue_color_theme_label"
            android:textSize="28sp" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_save_settings"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/set_theme_button"
        android:textSize="24sp" />


</androidx.constraintlayout.widget.ConstraintLayout>